V1/cahier de recette.adoc
= Cahier De Recette V1 - DailyBankApp
:toc:
:toc-title: Sommaire

:Entreprise: DailyBank
:Equipe:  BERNARD Julien, ESTRADE Prescilla, MALIQUE Manon

Créé par : BERNARD Julien, ESTRADE Prescilla, MALIQUE Manon - Groupe 4A1 +
Créé pour :  

Date : 17 mai 2023

== I. Introduction
=== 1. Objet :
[.text-justify]
Ce document a été produit dans le cadre d'un projet d'élaboration d'une application bancaire pour la banque DailyBanck. L’application permet de gérer des comptes bancaires de dépôt pour des clients préalablement créés. Elle dispose de plusieurs fonctionnalités : débiter, créditer un compte, effectuer des virements, consulter un compte, le clôturer, simuler un emprunt ou encore générer un relevé mensuel.


== II. Pre-Requis :
[.text-justify]
L'exécution des tests spécifiés au chapitre suivant requiert :

* Une base de données installée (référence document technique).
* L'environnement de test tel que spécifié dans la partie "Environnement de test" de ce document.
* Les fiches de tests. *À vérifier*


=== 1. Éléments à tester :
[.text-justify]
Les éléments testés concernent les Use-Cases spécifiés dans la *documentation technique*.


=== 2. Environnement de test :
[.text-justify]
Ordinateur sous Windows ou OS équivalent.



== III. Cas de test :
=== 1. Fonctionnalités des guichetiers :
==== 1.1 Gestion des clients :

|====

>|Cas de test 4+|Test-01-01-01
>|Titre 4+|Création d'un nouveau client
>|Objectif 4+| Vérifier qu'il est possible de créer un nouveau client

5+|
^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_C.1 ^|Cliquer sur le bouton "Nouveau client". ^|La fenêtre de création des clients s'ouvre. ^| aucune ^|OK
^|All_G_C.2 ^|Compléter les champs spécifiés et valider. ^|Un nouveau client est créé. ^|aucune ^|OK


5+|

5+|Commentaire :
Compléter et si on ne valide pas, ...
|====


|====

>|Cas de test 4+|Test-01-01-02
>|Titre 4+|Modification d'un client
>|Objectif 4+| Vérifier qu'il est possible de modifier un client

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_C.3 ^|Cliquer sur le bouton "Modifier client". ^|La fenêtre de modification des données du clients s'ouvre. ^|Le client est sélectionné ^|OK
^|All_G_C.4 ^|Modifier les champs souhaités et confirmer. ^|Retour sur les informations du client. Le client est modifié. ^|La fenêtre modifier client est active ^|OK
^|All_G_C.5 ^|Modifier les champs souhaités et annuler. ^|Retour sur les informations du client. Le client est inchangé. ^|La fenêtre modifier client est active ^|OK

|====


==== 1.2 Gestion des comptes bancaires :


|====

>|Cas de test 4+|Test-01-02-03
>|Titre 4+|Consultation d'un compte
>|Objectif 4+| Vérifier qu'il est possible de consulter un compte

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_CB.1 ^|Cliquer sur le bouton "Comptes client". ^|La page des comptes du client s’affiche. ^|Un client actif est sélectionné ^|OK
^|All_G_CB.2 ^|Sélectionner le bouton "Voir opérations". ^|La page des opérations du compte s’affiche. ^|Un compte actif est sélectionné ^|OK


|====

|====

>|Cas de test 4+|Test-01-02-04
>|Titre 4+|Créer un compte - Julien
>|Objectif 4+| Ajouter la possibilité de créer un compte bancaire

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Nouveau compte". ^|La fenêtre "gestion d'un compte" s'affiche. ^|Un client actif est sélectionné ^|OK
^|All_G_COP.2 ^|Cliquer le bouton "Ajouter". ^|Le compte ajouté est visible sur la fenêtre "Gestion des comptes". ^|Un client actif est sélectionné ^|OK


|====

|====

>|Cas de test 4+|Test-01-02-05
>|Titre 4+|Clôturer un compte - Manon
>|Objectif 4+| Vérifier qu'il est possible de clôturer un compte

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|... ^|... ^| ... ^|...
^|All_G_COP.2 ^|... ^|... ^| ... ^|...
^|All_G_COP.3 ^|... ^|... ^| ... ^|...


|====

==== 1.3 Gestion des opérations :

|====

>|Cas de test 4+|Test-01-03-01
>|Titre 4+|Débiter un compte - Prescilla
>|Objectif 4+| Vérifier qu'il est possible de débiter un compte

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Enregistrer Débit". ^|La page des débit du compte s’affiche. ^| Un compte actif est sélectionné ^|OK
^|All_G_COP.2  ^|Rentrer un montant 50 dans le champ "Montant". ^|Le nouveau solde est +50euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros
 ^|OK
^|All_G_COP.3  ^|Rentrer un montant 150 dans le champ "Montant". ^|Le nouveau solde est -50 euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros, le découvert
autorisé est de -100 euros.
 ^|OK
^|All_G_COP.4  ^|Rentrer un montant 250 dans le champ "Montant". ^|Blocage ! + pop-up ^| Le compte sélectionné a un solde de +100 euros, le découvert
autorisé est de -100 euros.
 ^|OK
  
 

|====


|====

>|Cas de test 4+|Test-01-03-02
>|Titre 4+|Créditer un compte - Prescilla
>|Objectif 4+| Vérifier qu'il est possible de créditer un compte

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Enregistrer Crédit". ^|La page des crédit du compte s’affiche. ^| Un compte actif est sélectionné ^|...
^|All_G_COP.2  ^|Rentrer un montant 50 dans le champ "Montant". ^|Le nouveau solde est +50euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros
 ^|...
^|All_G_COP.3  ^|Rentrer un montant 150 dans le champ "Montant". ^|Le nouveau solde est -50 euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros, le découvert
autorisé est de -100 euros.
 ^|...
^|All_G_COP.4  ^|Rentrer un montant 250 dans le champ "Montant". ^|Blocage ! + pop-up ^| Le compte sélectionné a un solde de +100 euros, le découvert
autorisé est de -100 euros.
 ^|...
  
 

|====

|====

>|Cas de test 4+|Test-01-03-04
>|Titre 4+|Virement sur un compte - Julien
>|Objectif 4+| Vérifier qu'il est possible de faire un virement

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Enregistrer un virement". ^|La page des virement du compte s’affiche. ^|Un compte actif est sélectionné ^|OK
^|All_G_COP.2  ^|Rentrer un montant 50 dans le champ "Montant". ^|Le nouveau solde est +50euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros
 ^|...
^|All_G_COP.3  ^|Rentrer un ID d'un compte existant. ^|Le compte est trouvé et l'opération s'effectue ^| Le compte sélectionné a obtenu 50 euros.
 ^|...
^|All_G_COP.4  ^|Rentrer un montant 250 dans le champ "Montant". ^|Blocage ! + pop-up ^| Le compte sélectionné a un solde de +100 euros, le découvert
autorisé est de -100 euros.
 ^|...

|====




=== 2. Fonctionnalités des chefs d'agence :
[.text-justify]
Les chefs d'agence ont accès aux mêmes fonctionnalités que les guichetiers, ainsi que d'autres qui leur sont réservées.

==== 2.1 Gestion des clients :

|====

>|Cas de test 4+|Test-02-01-01
>|Titre 4+|Rendre inactif un client
>|Objectif 4+| Vérifier qu'il est possible de rendre un client inactif

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|Sélectionner le bouton "Inactif" et confirmer. ^|...  ^|Un client actif est sélectionné ... ^| ...

5+|

5+|Commentaire : REVOIR AVEC
 *clôturés*.|

|====

==== 2.2 Gestion des employés :

|====

>|Cas de test 4+|Test-02-01-01
>|Titre 4+|CREATE un employé - Manon
>|Objectif 4+| Vérifier qu'il est possible de créer un employé

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|... ^|...   ^|...  ^| ...
^|C_G_C.2    ^|... ^|...   ^|...  ^| ...
^|C_G_C.3    ^|... ^|...   ^|...  ^| ...

|====

|====

>|Cas de test 4+|Test-02-01-02
>|Titre 4+|READ un employé - Manon
>|Objectif 4+| Vérifier qu'il est possible de voir les informations d'un employé

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|... ^|...   ^|...  ^| ...
^|C_G_C.2    ^|... ^|...   ^|...  ^| ...
^|C_G_C.3    ^|... ^|...   ^|...  ^| ...

|====


|====

>|Cas de test 4+|Test-02-01-03
>|Titre 4+|UPDATE un employé - Prescilla
>|Objectif 4+| Vérifier qu'il est possible de modifier les informations d'un employé

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|Sélectionner le bouton "Modifier" et confirmer. ^|Une fenêtre s'ouvre affichant les informations de l'employé que l'on modifie et les modifications sont effectuées   ^|Un employé est sélectionné  ^| ...

|====

|====

>|Cas de test 4+|Test-02-01-04
>|Titre 4+|DELETE un employé - Julien
>|Objectif 4+| Vérifier qu'il est possible de supprimer un employé

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|... ^|...   ^|...  ^| ...
^|C_G_C.2    ^|... ^|...   ^|...  ^| ...
^|C_G_C.3    ^|... ^|...   ^|...  ^| ...

|====
