V2/cahier de recette.adoc
= Cahier De Recette V2 - DailyBankApp
:toc:
:toc-title: Sommaire

:Entreprise: DailyBank
:Equipe:  BERNARD Julien, ESTRADE Prescilla, MALIQUE Manon

Créé par : BERNARD Julien, ESTRADE Prescilla, MALIQUE Manon - Groupe 4A1 +
Créé pour : Tester les fonctionnalités de l'application DailyBank

Date : 26 mai 2023

== I. Introduction
=== 1. Objet :
[.text-justify]
Ce document a été produit dans le cadre d'un projet d'élaboration d'une application bancaire pour la banque DailyBank. L’application permet de gérer des comptes bancaires de dépôt pour des clients préalablement créés. Elle dispose de plusieurs fonctionnalités : débiter, créditer un compte, effectuer des virements, consulter un compte, le clôturer, simuler un emprunt ou encore générer un relevé mensuel.


== II. Pre-Requis :
[.text-justify]
L'exécution des tests spécifiés au chapitre suivant requiert :

* Une base de données installée (référence document technique).
* L'environnement de test tel que spécifié dans la partie "Environnement de test" de ce document.
* Les fiches de tests. *À vérifier*


=== 1. Éléments à tester :
[.text-justify]
Les éléments testés concernent les Use-Cases spécifiés dans la *documentation technique*.


=== 2. Environnement de test :
[.text-justify]
Ordinateur sous Windows ou OS équivalent.



== III. Cas de test :
=== 1. Fonctionnalités des guichetiers :
==== 1.1 Gestion des clients :

|====

>|Cas de test 4+|Test-01-01-01
>|Titre 4+|Création d'un nouveau client
>|Objectif 4+| Vérifier qu'il est possible de créer un nouveau client

5+|
^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_C.1 ^|Cliquer sur le bouton "Nouveau client". ^|La fenêtre de création des clients s'ouvre. ^| aucune ^|OK
^|All_G_C.2 ^|Compléter les champs spécifiés et valider. ^|Un nouveau client est créé. ^|aucune ^|OK


5+|

5+|Commentaire :
Compléter et si on ne valide pas, ...
|====


|====

>|Cas de test 4+|Test-01-01-02
>|Titre 4+|Modification d'un client
>|Objectif 4+| Vérifier qu'il est possible de modifier un client

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_C.3 ^|Cliquer sur le bouton "Modifier client". ^|La fenêtre de modification des données du clients s'ouvre. ^|Le client est sélectionné ^|OK
^|All_G_C.4 ^|Modifier les champs souhaités et confirmer. ^|Retour sur les informations du client. Le client est modifié. ^|La fenêtre modifier client est active ^|OK
^|All_G_C.5 ^|Modifier les champs souhaités et annuler. ^|Retour sur les informations du client. Le client est inchangé. ^|La fenêtre modifier client est active ^|OK

|====


==== 1.2 Gestion des comptes bancaires :


|====

>|Cas de test 4+|Test-01-02-03
>|Titre 4+|Consultation d'un compte
>|Objectif 4+| Vérifier qu'il est possible de consulter un compte

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_CB.1 ^|Cliquer sur le bouton "Comptes client". ^|La page des comptes du client s’affiche. ^|Un client actif est sélectionné ^|OK
^|All_G_CB.2 ^|Sélectionner le bouton "Voir opérations". ^|La page des opérations du compte s’affiche. ^|Un compte actif est sélectionné ^|OK


|====

[[creer_compte]]
|====

>|Cas de test 4+|Test-01-02-04
>|Titre 4+|Créer un compte - Julien
>|Objectif 4+| Ajouter la possibilité de créer un compte bancaire

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Nouveau compte". ^|La fenêtre "gestion d'un compte" s'affiche. ^|Un client actif est sélectionné ^|OK
^|All_G_COP.2 ^|Cliquer le bouton "Ajouter". ^|Le compte ajouté est visible sur la fenêtre "Gestion des comptes". ^|Un client actif est sélectionné ^|OK


|====

[[cloturer_compte]]
|====

>|Cas de test 4+|Test-01-02-05
>|Titre 4+|Clôturer un compte - Manon
>|Objectif 4+| Vérifier qu'il est possible de clôturer un compte

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|... ^|... ^| ... ^|...
^|All_G_COP.2 ^|... ^|... ^| ... ^|...
^|All_G_COP.3 ^|... ^|... ^| ... ^|...


|====

==== 1.3 Gestion des opérations :

[[debiter_compte]]

|====

>|Cas de test 4+|Test-01-03-01
>|Titre 4+|Débiter un compte - Prescilla
>|Objectif 4+| Vérifier qu'il est possible de débiter un compte

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Enregistrer Débit". ^|La page des débit du compte s’affiche. ^| Un compte actif est sélectionné ^|OK
^|All_G_COP.2  ^|Rentrer un montant 50 dans le champ "Montant". ^|Le nouveau solde est +50euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros
 ^|OK
^|All_G_COP.3  ^|Rentrer un montant 150 dans le champ "Montant". ^|Le nouveau solde est -50 euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros, le découvert
autorisé est de -100 euros.
 ^|OK
^|All_G_COP.4  ^|Rentrer un montant 250 dans le champ "Montant". ^|Blocage ! + pop-up ^| Le compte sélectionné a un solde de +100 euros, le découvert autorisé est de -100 euros.
 ^|OK
 ^|All_G_COP.5 ^|Cliquer sur le bouton "Annuler débit". ^|Cela renvoie vers la fenêtre de la liste des opérations du compte. ^| Un compte actif est sélectionné ^|OK
  
|====

[[crediter_compte]]

|====

>|Cas de test 4+|Test-01-03-02
>|Titre 4+|Créditer un compte - Prescilla
>|Objectif 4+| Vérifier qu'il est possible de créditer un compte

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Enregistrer Crédit". ^|La page des crédit du compte s’affiche. ^| Un compte actif est sélectionné ^|OK
^|All_G_COP.2  ^|Rentrer un montant 50 dans le champ "Montant". ^|Le nouveau solde est +150euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros
 ^|OK
^|All_G_COP.3  ^|Rentrer un montant -10 dans le champ "Montant". ^|Blocage ! + pop-up (montant inférieur à 0) ^| Le compte sélectionné a un solde de +100 euros.
 ^|OK
^|All_G_COP.4 ^|Cliquer sur le bouton "Annuler crédit". ^|Cela renvoie vers la fenêtre de la liste des opérations du compte. ^| Un compte actif est sélectionné ^|OK

|====

[[virement_compte]]
|====

>|Cas de test 4+|Test-01-03-04
>|Titre 4+|Virement sur un compte - Julien
>|Objectif 4+| Vérifier qu'il est possible de faire un virement

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Enregistrer un virement". ^|La page des virement du compte s’affiche. ^|Un compte actif est sélectionné ^|OK
^|All_G_COP.2  ^|Rentrer un montant 50 dans le champ "Montant". ^|Le nouveau solde est +50euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros
 ^|...
^|All_G_COP.3  ^|Rentrer un ID d'un compte existant. ^|Le compte est trouvé et l'opération s'effectue ^| Le compte sélectionné a obtenu 50 euros.
 ^|...
^|All_G_COP.4  ^|Rentrer un montant 250 dans le champ "Montant". ^|Blocage ! + pop-up ^| Le compte sélectionné a un solde de +100 euros, le découvert
autorisé est de -100 euros.
 ^|...

|====

[[releve_mensuel_compte]]
|====

>|Cas de test 4+|Test-01-03-05
>|Titre 4+|Générer un relevé mensuel d'un compte en PDF - Manon
>|Objectif 4+| Vérifier qu'il est possible de générer un relevé mensuel d'un compte en PDF

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|... ^|... ^|... ^|...
^|All_G_COP.2 ^|... ^|... ^|... ^|...
^|All_G_COP.3 ^|... ^|... ^|... ^|...
^|All_G_COP.4 ^|... ^|... ^|... ^|...

|====

==== 1.4 Gestion des prélèvements automatiques :

[[create_prelevements_automatiques]]
|====

>|Cas de test 4+|Test-01-04-01
>|Titre 4+|CREATE un prélèvement automatique - Julien
>|Objectif 4+| Vérifier qu'il est possible de créer un prélèvement automatique

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Nouveau prél. auto. ^|La fenêtre de gestion d'un prélèvement s'affiche. ^|Un compte actif est sélectionné ^|OK
^|All_G_COP.2 ^|Rentrer un montant 50 dans le champ "Montant" ^|Le compte sera retiré de 50 à la date venu ^|Le compte doit avoir plus de 50 euros ^|OK
^|All_G_COP.3 ^|Rentrer une date entre 1 et 28 ^|La date est accepté ^|Le compte doit avoir plus de 50 euros  ^|OK
^|All_G_COP.4 ^|Un bénéficiaire à été entré mais le montant est négatif ^|Message d'avertissement ^|Le montant doit être positif ^|OK

|====

[[read_prelevements_automatiques]]
|====

>|Cas de test 4+|Test-01-04-02
>|Titre 4+|READ un prélèvement automatique - Julien
>|Objectif 4+| Vérifier qu'il est possible de lire les informations d'un prélèvement automatique

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Un compte bancaire est sélectionner et on clique sur "Voir prélèvements". ^|Une fenêtre apparaît et affiche les prélèvements ^|Cliquer sur un compte ^|OK
^|All_G_COP.2 ^|Le bouton "Voir Prélèvements" est grisé sans sélectionner de compte. ^|Impossible de voir les prélèvements ^|Ne pas cliquer sur un compte ^|OK

|====

[[update_prelevements_automatiques]]
|====

>|Cas de test 4+|Test-01-04-03
>|Titre 4+|UPDATE un prélèvement automatique - Julien
>|Objectif 4+| Vérifier qu'il est possible modifier les informations d'un prélèvement automatique

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Sélectionner un prélèvement et cliquer sur le bouton "Modifier prél. auto" ^|Ouvre la fenêtre pour modifier ^|Avoir sélectionner un prélèvement ^|OK
^|All_G_COP.2 ^|Le bouton "Modifier prél. auto" est grisé ^|Impossible de modifier le prélèvement ^|Ne pas sélectionner de prélèvement ^|OK
^|All_G_COP.3 ^|Rentrer une date supérieur à 28 ^|La date est refusé ^|La date doit être entre 1 et 28  ^|OK
^|All_G_COP.4 ^|Rentrer un montant supérieur au solde ^|Alerte d'avertissement ^|Avoir un solde inférieur au montant inscrit ^|OK

|====

[[delete_employe]]
|====

>|Cas de test 4+|Test-01-04-04
>|Titre 4+|DELETE un prélèvement automatique - Julien
>|Objectif 4+| Vérifier qu'il est possible de supprimer un prélèvement automatique

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|All_G_COP.1 ^|Cliquer sur le bouton "Supprimer prél. auto." en sélectionnant un prélèvement ^|Supprime le prélèvement de la BD ^|Sélectionner un prélèvement ^|OK
^|All_G_COP.2 ^|Cliquer sur le bouton "Supprimer prél. auto." sans sélectionné un prélèvement ^|Impossible de cliquer sur le bouton ^|aucune ^|OK

|====


=== 2. Fonctionnalités des chefs d'agence :
[.text-justify]
Les chefs d'agence ont accès aux mêmes fonctionnalités que les guichetiers, ainsi que d'autres qui leur sont réservées.

==== 2.1 Gestion des clients :

|====

>|Cas de test 4+|Test-02-01-01
>|Titre 4+|Rendre inactif un client
>|Objectif 4+| Vérifier qu'il est possible de rendre un client inactif

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|Sélectionner le bouton "Inactif" et confirmer. ^|...  ^|Un client actif est sélectionné ... ^| ...

5+|

5+|Commentaire : REVOIR AVEC
 *clôturés*.|

|====

==== 2.2 Gestion des employés :

[[create_employe]]
|====

>|Cas de test 4+|Test-02-01-01
>|Titre 4+|CREATE un employé - Manon
>|Objectif 4+| Vérifier qu'il est possible de créer un employé

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|... ^|...   ^|...  ^| ...
^|C_G_C.2    ^|... ^|...   ^|...  ^| ...
^|C_G_C.3    ^|... ^|...   ^|...  ^| ...

|====

[[read_employe]]
|====

>|Cas de test 4+|Test-02-01-02
>|Titre 4+|READ un employé - Manon
>|Objectif 4+| Vérifier qu'il est possible de voir les informations d'un employé

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|... ^|...   ^|...  ^| ...
^|C_G_C.2    ^|... ^|...   ^|...  ^| ...
^|C_G_C.3    ^|... ^|...   ^|...  ^| ...

|====

[[update_employe]]
|====

>|Cas de test 4+|Test-02-01-03
>|Titre 4+|UPDATE un employé - Prescilla
>|Objectif 4+| Vérifier qu'il est possible de modifier les informations d'un employé

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|Sélectionner le bouton "Modifier" et confirmer. ^|Une fenêtre s'ouvre affichant les informations de l'employé que l'on modifie et les modifications sont effectuées   ^|Un employé est sélectionné  ^| ...

5+|Commentaire : Fonctionnalité non réalisé.|
 
|====

[[delete_employe]]
|====

>|Cas de test 4+|Test-02-01-04
>|Titre 4+|DELETE un employé - Julien
>|Objectif 4+| Vérifier qu'il est possible de supprimer un employé

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1    ^|... ^|...   ^|...  ^| ...
^|C_G_C.2    ^|... ^|...   ^|...  ^| ...
^|C_G_C.3    ^|... ^|...   ^|...  ^| ...

|====

==== 2.3 Gestion des opérations :

[[debit_exceptionnel]]
|====

>|Cas de test 4+|Test-02-03-01
>|Titre 4+|Débit exceptionnel - Prescilla
>|Objectif 4+| Vérifier qu'il est possible d'effectuer un débit exceptionnel

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1 ^|Cliquer sur le bouton "Enregistrer Débit". ^|La page des débit exceptionnel du compte s’affiche. ^| Un compte actif est sélectionné ^|OK
^|C_G_C.2 ^|Rentrer un montant 350 dans le champ "Montant". ^|Le nouveau solde est -150euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +200 euros et un découvert autorisé de 100 euros
 ^|OK
^|C_G_C.3 ^|Rentrer un montant 120 dans le champ "Montant". ^| Le nouveau solde est -20euros. On a créé une nouvelle oprération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné a un solde de +100 euros, le découvert autorisé est de -100 euros.
 ^|OK
^|C_G_C.4 ^|Cliquer sur le bouton "Annuler débit exceptionnel". ^|Cela renvoie vers la fenêtre de la liste des opérations du compte. ^| Un compte actif est sélectionné ^|OK

|====

[[simuler_emprunt_assurance]]
|====

>|Cas de test 4+|Test-02-03-02
>|Titre 4+|Simuler un emprunt et une assurance d'emprunt - Prescilla
>|Objectif 4+| Vérifier qu'il est possible de simuler un emprunt et une assurance d'emprunt

5+|

^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|C_G_C.1  ^|Cliquer sur le bouton "Simuler emprunt"^|La fenêtre d'information d'un emprunt s'affiche ^|Avoir sélectionné la page clients ^|OK
^|C_G_C.2 ^|Cliquer sur le bouton "Simuler un emprunt" ^|La fenêtre de simulation d'emprunt avec le résultat s'affiche ^|Avoir rempli les informations d'emprunt ^|OK
^|C_G_C.4 ^|Capital emprunté, durée de l'emprunt ou taux d'intérêts null ^|Blocage + pop-up ^| Avoir sélectionné le bouton "Simuler emprunt" ^|OK
^|C_G_C.5 ^|Taux d'assurance supérieur à 100 ^|Blocage + pop-up ^| Avoir sélectionné le bouton "Simuler emprunt" ^|OK
^|C_G_C.6  ^|Cliquer sur le bouton "Annuler l'emprunt". ^|Cela renvoie vers la fenêtre des comptes clients ^| Avoir sélectionné la page clients ^|OK

|====

=== 3. BATCH :

[[releves_mensuels]]
|====

>|Cas de test 4+|Test-03-01-00
>|Titre 4+|Générer les relevés mensuels en PDF - Prescilla
>|Objectif 4+| Vérifier qu'il est possible de générer les relevés mensuels en PDF

5+|
^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|B_G_C.4  ^|... ^|... ^|... ^|...

5+|Commentaire : Fonctionnalité non réalisé |
 
|====

[[executer_prelevements_automatiques]]
|====

>|Cas de test 4+|Test-03-02-00
>|Titre 4+|Exécuter les prélèvements automatiques - Manon
>|Objectif 4+| Vérifier qu'il est possible d'exécuter les prélèvements automatiques

5+|
^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
^|B_G_C.4  ^|... ^|... ^|... ^|...
^|B_G_C.4  ^|... ^|... ^|... ^|...

|====
